change of styles

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
   <h1 class="text-center">Mis Eventos</h1>
   <%= link_to 'Agregar Evento', new_event_path, class: 'btn btn-primary mb-3' %>
-  <%= link_to 'Ver Trabajadores', workers_path, class: 'btn btn-primary' %>
-  #<%= link_to 'Agregar Evento Sin Trabajador', new_without_worker_events_path, class: 'btn btn-secondary mb-3' %>
+  <%= link_to 'Ver Trabajadores', workers_path, class: 'btn btn-primary mb-3' %>
+  
 
   <table class="table table-bordered">
     <thead class="thead-light">
