--- a/app/views/worker_events/index.html.erb
+++ b/app/views/worker_events/index.html.erb
@@ -1,11 +1,23 @@
+<div class="container my-4">
+  <h1 class="text-center mb-4">Eventos de <%= @worker.name %></h1>
 
+  <div class="mb-3">
+    <%= link_to "Crear evento para #{@worker.name}", new_event_path(worker_id: @worker.id), class: 'btn btn-primary' %>
+    <%= link_to 'Volver a Trabajadores', workers_path, class: 'btn btn-secondary' %>
+  </div>
 
-<h1>Eventos de <%= @worker.name %></h1>
-<ul>
-  <% @events.each do |event| %>
-    <li><strong><%= event.title %></strong> - <%= event.start_time %></li>
+  <ul class="list-group">
+    <% @events.each do |event| %>
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+        <strong><%= event.title %></strong>
+        <span><%= event.start_time.strftime("%d de %B, %Y a las %H:%M") %></span>
+      </li>
+    <% end %>
+  </ul>
+
+  <% if @events.empty? %>
+    <div class="alert alert-info mt-3" role="alert">
+      No hay eventos registrados para este trabajador.
+    </div>
   <% end %>
-</ul>
-
-<%= link_to 'Crear nuevo evento para este trabajador', new_event_path(worker_id: @worker.id), class: 'btn btn-primary' %>
-<%= link_to 'Volver a Trabajadores', workers_path %>
+</div>
